--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+html {display: table; margin: auto;}
+html, body {height: 90%;}
+
 @font-face {font-family: Liberation Serif; src: url(http://jdgmiles.github.io/LiberationSerif.woff);}
 @font-face {font-family: Liberation Serif Bold; src: url(http://jdgmiles.github.io/LiberationSerif-Bold.woff);}
 @font-face {font-family: Liberation Serif Italic; src: url(http://jdgmiles.github.io/LiberationSerif-Italic.woff);}
 @font-face {font-family: Liberation Serif Bold Italic; src: url(http://jdgmiles.github.io/LiberationSerif-BoldItalic.woff);}
 
-body {font-family: Liberation Serif, Tahoma, Arial, Helvetica, Sans-Serif; font-size: 150%; background-color: black; color:white;}
+body {font-family: Liberation Serif, Tahoma, Arial, Helvetica, Sans-Serif; font-size: 150%; background-color: black; color:white; vertical-align:middle; display: table-cell;}
 
 .liberationregular {font-family:Liberation Serif, Tahoma, Arial, Helvetica, Sans-Serif}
 .liberationbold {font-family:Liberation Serif Bold, Liberation Serif, Tahoma, Arial, Helvetica, Sans-Serif}
@@ -34,12 +37,12 @@ body {font-family: Liberation Serif, Tahoma, Arial, Helvetica, Sans-Serif; font-
 }
 
 .popup {
-  margin: 70px auto;
+  margin: 100px;
   padding: 20px;
   background: #181818;
   border:2px solid #AAAAAA;
   border-radius: 20px;
-  width: 30%;
+  width: 500px;
   position: relative;
   transition: all 0s ease-in-out;
 }
@@ -61,13 +64,4 @@ body {font-family: Liberation Serif, Tahoma, Arial, Helvetica, Sans-Serif; font-
 .popup .content {
   max-height: 30%;
   overflow: auto;
-}
-
-@media screen and (max-width: 700px){
-  .box{
-    width: 70%;
-  }
-  .popup{
-    width: 70%;
-  }
 }
