--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {font-family: Liberation Serif, Tahoma, Arial, Helvetica, Sans-Serif; font-
 }
 
 .popup {
-  margin: 100px;
+  margin: 10%;
   padding: 20px;
   background: #181818;
   border:2px solid #AAAAAA;
