--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {font-family: Liberation Serif, Tahoma, Arial, Helvetica, Sans-Serif; font-
 
 .typerbutton {font-family: Liberation Serif, Tahoma, Arial, Helvetica, Sans-Serif; font-size:30px}
 .operationbutton {width:40px; height:40px; font-family: Liberation Serif, Tahoma, Arial, Helvetica, Sans-Serif; background-color: black; color:white; text-align:center; font-size:40px; line-height:20px;}
+.letterbutton {width:35px; height:35px; font-family: Liberation Serif, Tahoma, Arial, Helvetica, Sans-Serif; background-color: black; color:white; text-align:center; font-size:25px;}
 .word {font-family: Liberation Serif, Tahoma, Arial, Helvetica, Sans-Serif; background-color: black; color:white; width:450px; height:104px; text-align:center; font-size:85px; border:solid 2px; border-color:white;}
 .equalssign {font-family: Liberation Serif, Tahoma, Arial, Helvetica, Sans-Serif; background-color: black; color:white; text-align:center; font-size:100px}
 
